Fix Dark mode

--- a/pod/custom/static/custom/assets/css/custom.css
+++ b/pod/custom/static/custom/assets/css/custom.css
@@ -602,6 +602,13 @@ footer p {
 		margin-right: 0.8em;
 	}
 }
+/* theme tree */
+#treeview ul.list-group li{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	width: 100%;
+}
 /* podfile */
 #shareModalCenter #user-search.list-group{
 	max-height: 325px;
@@ -1373,6 +1380,25 @@ body.dark #form_theme .list-group-item{
 body.dark #form_theme .btn#cancel_theme{
 	margin: 1em .4em;
 }
+body.dark #treeview ul.list-group li.list-group-item-info a,
+body.dark #treeview ul.list-group li:hover a{
+	color: inherit !important;
+}
+
+body.dark #treeview ul.list-group li{
+	background-color: var(--background-dark-color);
+	padding: .4em 0;
+	padding-left: .4em;
+	color: var(--link-color);
+	border-color: var(--dark);
+}
+body.dark #treeview ul.list-group li:hover,
+body.dark #treeview ul.list-group li.list-group-item-info
+{
+	background-color: var(--link-color) !important;
+	color: #fff !important;
+}
+
 /* Footer  */
 body.dark footer.bg-dark{
 	background-color: var(--block-color) !important;
